# db-backup-notifier

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Makefile  README.md  backup.py  config.py  logger.py  notifier.py  pyproject.toml  setup.sh  stats.py
.github/workflows/: ci.yml
examples/: run_backup.sh
tests/: test_backup.py  test_config.py  test_notifier.py  test_stats.py
